--- a/css/main.css
+++ b/css/main.css
@@ -119,13 +119,14 @@ body {
   /*give the divs a width of 30%, add display:flex, set justify-content and align-items to center*/
   color: #fff;
   line-height: 1.5em;
-  font-size: 1.6em;
-  background-color: #f16059;
+  font-size: 1em;
+  background-color: #660066;
   height: 300px;
   display: flex;
   justify-content: center;
   width: 30%;
   align-items: center;
+  text-align: center;
 }
 
 
